<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:id="@+id/toolbar"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:layout_width="match_parent"-->
        <!--/>-->


</LinearLayout>

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.inshodesign.nytimesreader.MainActivity"-->
    <!--tools:ignore="MergeRootFrame"-->
    <!--android:background="@android:color/white" />-->

