<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inshodesign.nytimesreader.MainActivity">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    <!---->
    <!--<TextView-->
        <!--android:text="@string/mainmenuButton_Popular"-->
        <!--android:textSize="25sp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginStart="32dp"-->
        <!--android:layout_marginTop="38dp"-->
        <!--android:id="@+id/buttonPopular" />-->


    <!--<TextView-->
        <!--android:text="@string/mainmenuButton_Top"-->
        <!--android:textSize="25sp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginStart="32dp"-->
        <!--android:layout_marginTop="38dp"-->
        <!--android:id="@+id/buttonTop" />-->


</RelativeLayout>