...
    <!--android:layout_height="match_parent">-->

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/transparent"
    android:id="@+id/popuptab_layout"
    android:fitsSystemWindows="true"
        android:layout_height="match_parent">

    <TextView
        android:text=" "
        android:layout_width="match_parent"
...
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@color/primary_dark"
            android:id="@+id/articleTitle" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:padding="10dip"
            android:layout_marginTop="2dp"
...
